--- a/Units/app.css
+++ b/Units/app.css
@@ -1,42 +1,62 @@
-section {
+html {
+    font-size: 30px;
+}
+#percentages {
     background-color: #6d6875;
     width: 800px;
     height: 800px;
 }
 
-div {
+#percentages div {
     background-color: #e5989b;
     width: 70%;
     height: 20%;
 }
 
-h1 {
+#ems h1 {
     font-size: 40px;
     border: 1px solid black;
     line-height: 200%;
 }
 
-h2 {
+#ems h2 {
     font-size: 2em;
     margin-left: 1em;
 }
 
-h3 {
+#ems h3 {
     font-size: 1.5em;
 }
 
-p {
+#ems p {
     font-size: 1em;
 }
 
-article {
+#ems article {
     font-size: 50px;
 }
 
-button {
+#ems ul {
+    font-size: 1.5em; 
+}
+ button {
     font-size: 1em;
     padding: 0 1em;
     border-radius: 0.5em;
     background-color: #2a9d8f;
     color: white;
+}
+
+#rems h2 {
+    font-size: 3rem;
+}
+#rems h3 {
+    font-size: 2rem;
+}
+#rems ul {
+    font-size: 1.5rem;
+}
+
+#rems button {
+    font-size: 1.5rem;
 }
